# keypop-reader-cpp-api

./: .clang-format  .cppcheck.suppress  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  NOTICE.md  README.md  _config.yml  list_versions.md
..-SNAPSHOT/: _basic_card_selector_8hpp.html  _basic_card_selector_8hpp__incl.map  _basic_card_selector_8hpp_source.html  _card_communication_exception_8hpp.html  _card_communication_exception_8hpp__incl.map  _card_communication_exception_8hpp_source.html  _card_reader_8hpp.html  _card_reader_8hpp_source.html  _card_reader_event_8hpp.html  _card_reader_event_8hpp_source.html  _card_reader_observation_exception_handler_spi_8hpp.html  _card_reader_observation_exception_handler_spi_8hpp__incl.md5  _card_reader_observation_exception_handler_spi_8hpp_source.html  _card_reader_observer_spi_8hpp.html  _card_reader_observer_spi_8hpp_source.html  _card_selection_extension_8hpp.html  _card_selection_extension_8hpp_source.html  _card_selection_manager_8hpp.html  _card_selection_manager_8hpp_source.html  _card_selection_result_8hpp.html  _card_selection_result_8hpp_source.html  _card_selector_8hpp.html  _card_selector_8hpp_source.html  _common_iso_card_selector_8hpp.html  _common_iso_card_selector_8hpp__incl.md5  _common_iso_card_selector_8hpp_source.html  _configurable_card_reader_8hpp.html  _configurable_card_reader_8hpp__incl.md5  _configurable_card_reader_8hpp_source.html  _invalid_card_response_exception_8hpp.html  _invalid_card_response_exception_8hpp_source.html  _iso_card_selector_8hpp.html  _iso_card_selector_8hpp__incl.map  _iso_card_selector_8hpp_source.html  _iso_smart_card_8hpp.html  _iso_smart_card_8hpp_source.html  _observable_card_reader_8hpp.html  _observable_card_reader_8hpp__dep__incl.md5  _observable_card_reader_8hpp__incl.map  _observable_card_reader_8hpp_source.html  (+95 more)
2.0.0-SNAPSHOT/: _basic_card_selector_8hpp.html  _basic_card_selector_8hpp__dep__incl.map  _basic_card_selector_8hpp__dep__incl.md5  _basic_card_selector_8hpp__incl.map  _basic_card_selector_8hpp__incl.md5  _basic_card_selector_8hpp_source.html  _card_communication_exception_8hpp.html  _card_communication_exception_8hpp__incl.md5  _card_communication_exception_8hpp_source.html  _card_reader_8hpp.html  _card_reader_8hpp__dep__incl.map  _card_reader_8hpp__dep__incl.md5  _card_reader_8hpp__incl.map  _card_reader_8hpp__incl.md5  _card_reader_8hpp_source.html  _card_reader_event_8hpp.html  _card_reader_event_8hpp__dep__incl.md5  _card_reader_event_8hpp__incl.map  _card_reader_event_8hpp_source.html  _card_reader_observation_exception_handler_spi_8hpp.html  _card_reader_observation_exception_handler_spi_8hpp__incl.map  _card_reader_observation_exception_handler_spi_8hpp_source.html  _card_reader_observer_spi_8hpp.html  _card_reader_observer_spi_8hpp__dep__incl.map  _card_reader_observer_spi_8hpp__incl.map  _card_reader_observer_spi_8hpp__incl.md5  _card_reader_observer_spi_8hpp_source.html  _card_selection_extension_8hpp.html  _card_selection_extension_8hpp__dep__incl.map  _card_selection_extension_8hpp_source.html  _card_selection_manager_8hpp.html  _card_selector_8hpp.html  (+170 more)
src/test/: CMakeLists.txt  CMakeLists.txt.googletest  CMakeLists.txt.in  MainTest.cpp  ReaderApiPropertiesTest.cpp
(+394 files in other folders)
